--- a/swallow/index.html
+++ b/swallow/index.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="img">
-                        <img src="/img/about.jpg" alt="">
+                        <img src="img/about.jpg" alt="">
                     </div>
                 </div>
                 <div class="row two">
@@ -382,7 +382,7 @@
 
     <div class="popup-main" id="popupopenid">
         <div class="popup-body">
-            <button class="close-popup"><img src="/img/close.svg" alt="close"></button>
+            <button class="close-popup"><img src="img/close.svg" alt="close"></button>
             <h3>book a table</h3>
             <div class="form-style-block">
                 <div class="form">
